Clean unused service methods